# customer-solution-snapshot-generator

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  ERROR_TRACKING.md  MEMORY_OPTIMIZATION.md  MONITORING.md  PERFORMANCE.md  README.md  RELEASE_PROCESS.md  SETUP.md  UPGRADING.md  benchmark.py  deploy.py  docker-entrypoint.sh  error_analysis_dashboard.py  healthcheck.py  monitor.py  monitoring_config.yaml  monitoring_dashboard.py  optimize.py  performance_dashboard.py  pyproject.toml  pytest.ini  release.py  requirements-dev.txt  requirements-minimal.txt  requirements-working.txt  requirements.txt  test_error_system_standalone.py  test_error_tracking.py  test_memory_optimization.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci-cd.yml  ci.yml  claude.yml  dependabot-auto-merge.yml  release-drafter.yml  release.yml
deployment/: config.yaml  docker-compose.template.yml
deployment/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml
docs/: GETTING_STARTED.md  USER_GUIDE.md
docs/_static/: custom.css
docs/source/: architecture.rst  conf.py  index.rst
docs/tutorials/: ADVANCED_FEATURES.md  API_EXAMPLES.md  QUICK_START.md  TROUBLESHOOTING.md  USE_CASES.md
examples/: sample_transcript.vtt
scripts/: MANUAL_LABEL_INSTRUCTIONS.md  README.md  close_obsolete_dependabot_prs.sh  create_github_labels.sh  deploy.sh  merge_github_actions_prs.sh  prepare-release.sh  validate-release.sh
scripts/benchmarking/: README.md  benchmark.py  performance_dashboard.py
scripts/deployment/: README.md  deploy.py  healthcheck.py  release.py
scripts/monitoring/: README.md  error_analysis_dashboard.py  monitor.py  monitoring_dashboard.py
scripts/optimization/: README.md  optimize.py
snapshot_automation/: .env.example  .gitignore  claude_quickstart.py  converter.py  extract_text.py  main.py  main_v2.py  model_loaders.py  transcript_parallel.py  transcript_pipeline.py  transcript_tools.py  utils.py  vtt_to_html_processor.py  vtt_to_markdown_processor.py
snapshot_automation/examples/: Percona_Kickoff_Transcript_Summary.md  Quest_Enterprises_Kickoff_Transcript_Summary.md  README.md  claude_quickstart.py  sample_input.vtt  sample_output_html.html  sample_output_markdown.md
snapshot_automation/template_files/: All_Prompt_Details.txt  Customer Solution Snapshot Template.docx  Percona_Customer Solution Snapshot Template.docx  System_Prompt_Customer_Success_Snapshot.txt  quest_enterprises_snapshot_template.docx
snapshot_automation/vtt_files/: formatted_transcript.html  formatted_transcript.md  formatted_transcript_v2.md  percona_project_kickoff_transcript.vtt  plain_text_output.txt  project_kickoff_transcript.vtt
src/customer_snapshot/: __init__.py  cli.py
src/customer_snapshot/ai/: __init__.py
src/customer_snapshot/core/: __init__.py  nlp_engine.py  processor.py
src/customer_snapshot/io/: __init__.py  output_writer.py  vtt_reader.py
src/customer_snapshot/monitoring/: __init__.py  alerting.py  error_tracker.py  health_monitor.py  system_monitor.py
src/customer_snapshot/utils/: __init__.py  config.py  error_handling.py  logging_config.py  memory_optimizer.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: test_end_to_end.py
tests/manual/: README.md  test_error_system_standalone.py  test_error_tracking.py  test_memory_optimization.py
tests/unit/: test_config.py  test_transcript_processing.py  test_validators.py
