[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-solution-snapshot-generator"
version = "0.1.0"
description = "Automated Python tool for generating customer success snapshots from meeting transcripts"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Customer Snapshot Team"},
]
keywords = ["nlp", "transcript", "ai", "customer-success", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "anthropic>=0.34.0",
    "langchain>=0.2.11",
    "langchain-anthropic>=0.1.15",
    "langchain-community>=0.2.10",
    "langchain-voyageai>=0.1.2",
    "python-dotenv>=1.0.1",
    "webvtt-py>=0.4.6",
    "pycaption>=2.2.1",
    "nltk>=3.8.1",
    "spacy>=3.7.2",
    "transformers>=4.41.2",
    "coreferee>=1.4.0",
    "faiss-cpu>=1.8.0",
    "markdown>=3.6",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "mypy>=1.10.1",
    "isort>=5.13.2",
    "bandit>=1.7.9",
    "safety>=3.2.4",
    "pre-commit>=3.7.1",
]
docs = [
    "sphinx>=7.3.7",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/arthurfantaci/customer-solution-snapshot-generator"
Repository = "https://github.com/arthurfantaci/customer-solution-snapshot-generator"
Issues = "https://github.com/arthurfantaci/customer-solution-snapshot-generator/issues"

[project.scripts]
customer-snapshot = "customer_snapshot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
customer_snapshot = ["templates/*", "data/*"]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["customer_snapshot"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src/customer_snapshot",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-report=xml",
    "--cov-fail-under=80"
]

[tool.coverage.run]
source = ["src/customer_snapshot"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip test_assert_used

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".mypy_cache",
]